[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Marcelo Coelho <92119579+MCoelho222@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.3"
xlrd = "^2.0.1"
openpyxl = "^3.0.10"
matplotlib = "^3.5.3"
chardet = "^5.0.0"
seaborn = "^0.12.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
